# bas-cpp

./: .gitignore  EXFAT_IMPLEMENTATION.md  EXFAT_SUMMARY.md  FAT32_FOREST_TEST_RESULTS.md  FILESYSTEM_IMPLEMENTATION_SUMMARY.md  FSLANG_DESIGN.md  FSLANG_TESTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  KNOWN_LIMITATIONS.md  README.md  TESTING_GUIDE.md  TEST_SUMMARY.md  VERSION.av  meson.build  test_fslang.cpp
app/: acdemo.cpp  assets.cpp  assets.s  devdemo.cpp  meson.build  ptr_test.cpp  reg.cpp  tanks_game.cpp  tanks_game.hpp  tanks_rbac.cpp  tanks_rbac.hpp  vols.1  vols.bash  vols.cpp
debian/: bas-cpp.install  changelog  control  copyright  libbas-cpp-dev.install  libbas-cpp1.install  rules
src/: assets.s  bulk.h  module.cpp
src/bas/fmt/: FileForm.hpp  FileUtility.cpp  FileUtility.hpp  HtmlForm.hpp  JsonForm.hpp  OctetStreamForm.hpp  TextForm.hpp
src/bas/io/: BlockDevice.cpp  BlockDevice.hpp  BufferedReader.hpp  ByteBuffer.cpp  ByteBuffer.hpp  ByteBuffer_test.cpp  Char32Buffer.cpp  CharBuffer.cpp  CharBuffer_test.cpp  CharsetDecoder_test.cpp  ConstBufferInputStream_test.cpp  EncodingWriteStream.hpp  EncodingWriteStreamToOutputStream.cpp  EncodingWriteStreamToOutputStream.hpp  InputSource.hpp  InputSource_test.cpp  InputStream.cpp  InputStream.hpp  InputStream_test.cpp  LAInputStream.cpp  LAInputStream_test.cpp  LAReader.cpp  LAReader.hpp  LocalInputSource.cpp  LocalInputStream.cpp  LocalOutputStream.hpp  LocalOutputTarget.cpp  LocalOutputTarget_test.cpp  OutputStream.cpp  OutputStream.hpp  OutputStreamWriter.cpp  OutputStreamWriter.hpp  Position.hpp  PrintStream.cpp  PrintStream.hpp  Reader.cpp  Reader.hpp  ReversedReader.cpp  StringReadStream.cpp  StringReadStream.hpp  (+22 more)
src/bas/net/: CurlOutputStream.cpp  CurlOutputStream.hpp  FtpsProtocol.hpp  HttpProtocol.hpp  LocalProtocol.cpp  NetProtocol.hpp  ProtocolRegistry.cpp  ProtocolRegistry.hpp  URI.hpp  URL.cpp  URL.hpp  URLInputSource.cpp  URLInputSource.hpp  URLOutputTarget.cpp  URLOutputTarget.hpp  URL_test.cpp
src/bas/proc/: AssetsRegistry.cpp  AssetsRegistry.hpp  DefAssets.hpp  UseAssets.hpp  dbgaction.cpp  env.cpp  env.hpp
src/bas/reg/: IRegistry.hpp  JsonRegistry.cpp  JsonRegistry.hpp  LocalRegistry.cpp  LocalRegistry.hpp  Registry.cpp  Registry.hpp  RegistryTypes.hpp  Sub.cpp  Sub.hpp  VolumeRegistry.cpp  VolumeRegistry.hpp  path.cpp  path.hpp  strings.cpp  strings.hpp  variant.cpp  variant.hpp
src/bas/script/: boost_json.cpp  boost_json.hpp  event_support.hpp  json.cpp  json.hpp  property_support.hpp  scriptable.hpp
src/bas/security/: ACList.cpp  ACList.hpp  AccessDecision.hpp  AccessDecisionResolver.cpp  AccessDecisionResolver.hpp  AccessDenied.hpp  AccessException.hpp  Binding.cpp  Binding.hpp  CommandSupport.cpp  CommandSupport.hpp  CredentialManager.cpp  CredentialManager.hpp  CredentialManagerCommand.cpp  Demo.cpp  Demo.hpp  Identity.cpp  Identity.hpp  IdentityRegistry.cpp  IdentityRegistry.hpp  IdentityRegistryCommand.cpp  IdentityService.cpp  IdentityService.hpp  IdentityServiceCommand.cpp  LoginPolicy.cpp  LoginPolicy.hpp  LoginUi.cpp  LoginUi.hpp  PasswordDigest.cpp  PasswordDigest.hpp  Permission.cpp  Permission.hpp  PolicyStore.cpp  PolicyStore.hpp  PolicyStoreCommand.cpp  README.md  Realm.cpp  Realm.hpp  SecurityManager.cpp  SecurityManager.hpp  (+43 more)
src/bas/time/: Duration.cpp  Duration.hpp  HHDates.cpp  HHDates.hpp  Instant.cpp  Instant.hpp  IsoParseDetail.cpp  IsoParseDetail.hpp  LocalDate.cpp  LocalDate.hpp  LocalDateTime.cpp  LocalDateTime.hpp  LocalTime.cpp  LocalTime.hpp  OffsetDateTime.cpp  OffsetDateTime.hpp  OffsetTime.cpp  OffsetTime.hpp  Period.cpp  Period.hpp  Temporal.cpp  Temporal.hpp  TemporalAccessor.cpp  TemporalAccessor.hpp  TimeApiDefaults.cpp  TimeTypes.cpp  TimeTypes.hpp  ZoneId.cpp  ZoneId.hpp  ZonedDateTime.cpp  ZonedDateTime.hpp  ZonedTime.cpp  ZonedTime.hpp
src/bas/util/: ClipboardHelper.hpp  FileTypeDetector.cpp  FileTypeDetector.hpp  LogBuffer.hpp  LogBuffer_test.cpp  encoding.cpp  encoding.hpp  ptr.hpp  repl.cpp  (+7 more)
src/fmt/: FileUtility.cpp  FileUtility.hpp  HtmlForm.cpp  JsonForm.cpp  JsonForm.hpp  OctetStreamForm.cpp
src/io/: BufferedReader.cpp  BufferedReader_test.cpp  ByteBuffer_test  Char32Buffer.hpp  Char32Buffer_test  CharBuffer.hpp  CharBuffer_test  CharsetDecoder.cpp  CharsetDecoder.hpp  CharsetDecoder_test  CharsetEncoder.cpp  CharsetEncoder.hpp  CharsetEncoder_test  ConstBufferInputStream.cpp  ConstBufferInputStream.hpp  DecodingReadStream.cpp  DecodingReadStream.hpp  EncodingWriteStream.cpp  EncodingWriteStream_test.cpp  IOException.hpp  InputSource.cpp  InputStreamReader.cpp  InputStreamReader.hpp  InputStreamReader_test.cpp  LAInputStream.hpp  LAInputStreamFromStream.cpp  LAInputStreamFromStream.hpp  LAReader_test.cpp  LocalInputSource.hpp  LocalInputSource_test  LocalInputSource_test.cpp  LocalInputStream.hpp  LocalOutputStream.cpp  LocalOutputStream_test.cpp  LocalOutputTarget.hpp  OutputStreamWriter_test.cpp  OutputTarget.hpp  PrintWriter.cpp  PrintWriter.hpp  ReadStream.hpp  (+25 more)
src/net/: CurlInputStream.cpp  CurlInputStream.hpp  DataProtocol.cpp  DataProtocol.hpp  DataProtocol_test.cpp  DataUriInputStream.cpp  DataUriInputStream.hpp  FtpProtocol.cpp  FtpProtocol.hpp  FtpsProtocol.cpp  HttpProtocol.cpp  HttpsProtocol.cpp  HttpsProtocol.hpp  LocalProtocol.hpp  NetProtocol.cpp  URI.cpp
src/proc/: Assets.cpp  Assets.hpp  AssetsRegistry.cpp  AssetsRegistry.hpp  DefAssets.hpp  ImageFormat.cpp  ImageFormat.hpp  UseAssets.hpp  assets_data.h
src/script/: json.hpp  json_test.cpp  property_support.hpp  scriptable.cpp
src/util/: ClipboardHelper.cpp  LogBuffer.cpp  Path.cpp  Path.hpp  PathHelper.cpp  PathHelper.hpp
src/volume/: DirEntry.hpp  FileStatus.hpp  LocalVolume.cpp  LocalVolume.hpp  MemoryZip.cpp  MemoryZip.hpp  OverlapVolume.cpp  OverlapVolume.hpp  OverlayVolume.cpp  OverlayVolume.hpp  Volume.cpp  Volume.hpp  VolumeExceptions.hpp  VolumeFile.cpp  VolumeFile.hpp  VolumeManager.cpp  VolumeManager.hpp  mountinfo.cpp
tests/: meson.build  regtest
tests/fslang/: exfat_readonly.fsl  ext4_basic.fsl  fat32_basic.fsl  fat32_stress.fsl
(+125 files in other folders)
